Introduce Image Collage Section, edit Swiper Gallery module

--- a/modules/categories.module/module.html
+++ b/modules/categories.module/module.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col sm:flex-row gap-5 flex-wrap justify-center lg:justify-between items-center px-4 md:px-6 text-white text-center font-light text-2xl relative py-[25px]">
+<div class="flex flex-col sm:flex-row gap-5 lg:gap-7 flex-wrap justify-center  items-center px-4 md:px-6 text-white text-center font-light text-2xl relative py-[25px]">
 	{% if module.variant == 'true' %}
 		<div class="absolute top-0 right-0 bg-blue w-1/5 h-[10px]"></div>
 	  <div class="absolute top-0 right-0 bg-blue w-[10px] max-h-[300px] h-full"></div>
