--- a/sections/categories.html
+++ b/sections/categories.html
@@ -6,7 +6,7 @@
   description: "Cover photo promo section without a title and a button"
 -->
 
-{% dnd_section class="py-4 px-4" %}
+{% dnd_section class="py-4 px-4 {{ context.custom_classes }}" %}
 	{% dnd_column offset=0, width=12 %}
     {% dnd_row offset=0, width=12 %}
       {% dnd_module
