--- a/sections/swiper-gallery.html
+++ b/sections/swiper-gallery.html
@@ -18,7 +18,6 @@
 		{% dnd_row offset=0, width=12 %}
 			{% dnd_module
         path='../modules/swiper-gallery',
-        variant={{ context.variant || false }},
         show_button={{ context.show_button || false }},
         button={{ context.button || {
           "link_field": {
@@ -36,8 +35,8 @@
           {
             "image_field": {
             "size_type": "auto",
-            "src": "https://atsistem.rs/hubfs/Partneri/BWT%20POOL%20PRODUCTS.png",
-            "alt": "imageedit_31_2841620365-1",
+            "src": "https://atsistem.rs/hubfs/Partneri/BWT_Pool_Products_2024.jpg",
+            "alt": "bwt pool products",
             "loading": "lazy",
             "width": 200,
             "height": 77,
@@ -49,7 +48,7 @@
             "image_field": {
             "size_type": "auto",
             "src": "https://atsistem.rs/hubfs/Partneri/Bio-Uv%20group.jpg",
-            "alt": "imageedit_31_2841620365-1",
+            "alt": "bio uv group",
             "loading": "lazy",
             "width": 200,
             "height": 77,
@@ -61,7 +60,175 @@
             "image_field": {
             "size_type": "auto",
             "src": "https://atsistem.rs/hubfs/Partneri/SPECK.jpg",
-            "alt": "imageedit_31_2841620365-1",
+            "alt": "speck pumpen",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/Aquacomet.jpg",
+            "alt": "aquacomet",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/EP%20LOGO.jpeg",
+            "alt": "endless pools",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/Poseidon%20header.jpg",
+            "alt": "poseidon spa",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/mosavit.jpeg",
+            "alt": "mosavit mosaico",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/ARKEMA%20DESIGN.jpeg",
+            "alt": "arkema design",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/FILTRINOV.jpg",
+            "alt": "filtrinov",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/KERAKOLL.jpg",
+            "alt": "kerakoll",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/logo-grando-pool-covers.png",
+            "alt": "grando pool covers",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/technopool%20logo.png",
+            "alt": "technopool",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/WDT-Logo-.jpg",
+            "alt": "wdt",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/ACQUA%20SOURCE1.jpeg",
+            "alt": "acqua source",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/Chemoform.jpg",
+            "alt": "Chemoform",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/logotype%20pahlen.jpeg",
+            "alt": "pahlen",
+            "loading": "lazy",
+            "width": 200,
+            "height": 77,
+            "max_width": 200,
+            "max_height": 77
+            }
+          },
+					{
+            "image_field": {
+            "size_type": "auto",
+            "src": "https://atsistem.rs/hubfs/Partneri/Peraqua_Logo_.jpg",
+            "alt": "peraqua",
             "loading": "lazy",
             "width": 200,
             "height": 77,
