--- a/sections/image-with-text.html
+++ b/sections/image-with-text.html
@@ -7,7 +7,7 @@
 -->
 
 {% dnd_section
-  class="{{ context.custom_classes || 'px-4 py-3' }}",
+  class={{ context.custom_classes || 'px-4 py-3' }},
   background_color={{ context.background_color || '#FFFFFF' }}
 %}
   {% dnd_column offset=0, width=12 %}
