--- a/modules/featured-services.module/module.html
+++ b/modules/featured-services.module/module.html
@@ -1,6 +1,7 @@
-<div class="flex flex-col xl:flex-row justify-between gap-5 items-center">
+<div class="featured-services flex flex-col xl:flex-row justify-between gap-5 items-center w-full">
 	<div class="border-l-[10px] border-l-pink pl-2 md:pl-4 lg:pl-5 max-w-[550px] w-full">
-		<{{ module.h_tag_choice }} id="{{ module.heading_id }}" class="h3 mb-1">{{ module.title }}</{{ module.h_tag_choice }}>
+		<{{ module.h_tag_choice }} id="{{ module.heading_id }}" class="h3 mb-1">{{ module.title }}</{{ module.h_tag_choice
+			}}>
 		<p class="text-xs leading-5 lg:text-p">{{ module.description }}</p>
 		{% if module.link_field.url.href != '' %}
 		<a href="{{ module.link_field.url.href }}" class="button flex mt-2">
@@ -8,16 +9,77 @@
 		</a>
 		{% endif %}
 	</div>
-	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-3 gap-2 text-white uppercase w-full">
+	<div
+		class="grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-3 gap-2 text-white uppercase w-full hidden sm:grid">
 		{% for card in module.cards %}
 		<div class="w-full h-[180px] rounded-md drop-shadow-sm flex flex-col justify-center items-center"
 			style="background-color: {{card.card_color.color}}">
-			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2" width="64" height="64" loading="lazy">
-			<p class="font-semibold">
+			<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2" width="64" height="64"
+				loading="lazy">
+			<p class="font-semibold text-white">
 				{{ card.card_title }}
 			</p>
 		</div>
 		{% endfor %}
-
+	</div>
+	<div class="featured-services-swiper-{{name}} swiper !block sm:!hidden w-full">
+		<div class="swiper-wrapper">
+			{% for card in module.cards %}
+			<div class="swiper-slide w-full">
+				<div class="w-full h-[180px] rounded-md flex flex-col justify-center items-center"
+					style="background-color: {{card.card_color.color}}">
+					<img src="{{card.image_field.src}}" alt="{{card.image_field.alt}}" class="mb-2" width="64" height="64"
+						loading="lazy">
+					<p class="font-semibold text-white">
+						{{ card.card_title }}
+					</p>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		<!-- Navigation -->
+		<div class="swiper-button-next swiper-button-next-{{name}}" />
+		<div class="swiper-button-prev swiper-button-prev-{{name}}" />
 	</div>
 </div>
+
+
+
+{% require_js %}
+<script>
+	if (!checkHeadForSwiper()) {
+		let script = document.createElement('script');
+		script.src = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js';
+		script.defer = true;
+		document.head.appendChild(script);
+
+		let link = document.createElement('link');
+		link.rel = 'stylesheet';
+		link.href = 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css';
+		document.head.appendChild(link);
+	}
+
+	window.addEventListener('load', () => {
+		const featuredServicesSwiper = new Swiper(".featured-services-swiper-{{name}}", {
+			slidesPerView: 1,
+			spaceBetween: 20,
+			freeMode: {
+				enabled: true,
+				sticky: true
+			},
+			mousewheel: {
+				forceToAxis: true,
+			},
+			autoplay: {
+				delay: 2500,
+				disableOnInteraction: true
+			},
+			navigation: {
+				nextEl: ".swiper-button-next-{{name}}",
+				prevEl: ".swiper-button-prev-{{name}}",
+			}
+		});
+	})
+
+</script>
+{% end_require_js %}
