edit pages navigation card style

--- a/modules/pages-navigation-cards.module/module.html
+++ b/modules/pages-navigation-cards.module/module.html
@@ -10,7 +10,7 @@
             module.h_tag_choice }}>
         </div>
         <div class="bg-purpleGradient w-full h-0.5" />
-        <div class="flex flex-col p-2 h-full justify-between gap-1">
+        <div class="flex flex-col p-2 h-full justify-between gap-1 bg-white">
           <p class="text-xs leading-5">{{ card.description }}</p>
           <a class="flex items-center group hover:text-darkPurple font-medium" href="{{card.link.link_field.url.href}}"
             {{ 'target="_blank"' if card.link.link_field.open_in_new_tab }}>
